@@ -5,6 +5,11 @@
   * Use roxygen2 for development of R package netmeta
 
   * New function plot.netrank() to produce image plot of P-scores
+    
+ ** Bug fixes **
+
+  * netgraph():
+    - argument seq = "optimal" works for single design
 
 
 **** netmeta, version 1.0-1, 2019-01-02 ***
